# Prolog-Interpreter

./: .gitignore  README.md  prelude.pl  prolog-interpreter.cabal  prolog.hs  sample.pl  stack.yaml
Prolog/: Base.hs  Interpreter.hs  Parsing.hs
src/: Main.hs
src/Prolog/: Base.hs  Interpreter.hs  Parsing.hs  Printing.hs
